--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.9.9",
     "@material-ui/pickers": "^3.2.10",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.4.0",
     "antd": "^3.7.0",
     "fontfaceobserver": "^2.0.13",
     "gatsby": "^2.0.21",
