--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.9.9",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.4.0",
@@ -19,6 +20,7 @@
     "gatsby-plugin-google-analytics": "^2.0.6",
     "gatsby-plugin-layout": "^1.0.2",
     "gatsby-plugin-manifest": "^2.0.2",
+    "gatsby-plugin-material-ui": "^2.1.9",
     "gatsby-plugin-netlify": "^2.0.0",
     "gatsby-plugin-offline": "^2.0.6",
     "gatsby-plugin-react-helmet": "^3.0.0",
@@ -37,8 +39,10 @@
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-transformer-remark": "^2.1.3",
     "gatsby-transformer-sharp": "^2.1.1",
+    "install": "^0.13.0",
     "js-yaml": "^3.12.0",
     "normalize.css": "^8.0.0",
+    "npm": "^6.14.6",
     "prismjs": "^1.15.0",
     "react": "^16.5.2",
     "react-addons-perf": "^15.4.2",
