--- a/src/theme/theme.yaml
+++ b/src/theme/theme.yaml
@@ -43,6 +43,7 @@ color:
     lightPurple: &lightPurple '#d2bbe5ff'
     lightPurpleBackground: &lightPurpleBackground '#d2bbe573'
     darkerPurpleText: &darkerPurpleText '#4e3b80'
+    veryLightPurple: &veryLightPurple '#f8f1ffff'
     white: &white '#fff'
     gray: &gray '	#696969'
 
