--- a/src/theme/theme.yaml
+++ b/src/theme/theme.yaml
@@ -44,6 +44,7 @@ color:
     lightPurpleBackground: &lightPurpleBackground '#d2bbe573'
     darkerPurpleText: &darkerPurpleText '#4e3b80'
     veryLightPurple: &veryLightPurple '#f8f1ffff'
+    blackText: &blackText '##2A2A2A'
     white: &white '#fff'
     gray: &gray '#696969'
     first: &first '#7BEFC5'
