--- a/src/theme/theme.yaml
+++ b/src/theme/theme.yaml
@@ -140,7 +140,7 @@ text:
     default: *font-line-height-l
   maxWidth:
     tablet: 650px
-    desktop: 700px
+    desktop: 80%
 heading:
   family: *font-family-target
   size:
