--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,6 @@
 GATSBY_STRIPE_PUBLISHABLE_KEY=pk_test_o6b4jIM3oR2AcO8hCjnnpJdH002ryQom04
+GATSBY_BUTTON_SKU_ID_ONE=sku_I9bxRXxfxHS3w2
+GATSBY_BUTTON_SKU_ID_FOUR=sku_I9cGZyZ7XSQ3B0
+GATSBY_BUTTON_SKU_ID_EIGHT=sku_I9cHC9Tjx9ca55
 GATSBY_BUTTON_SKU_ID=sku_H6qzpph93Ia1Mb
 STRIPE_SECRET_KEY=sk_test_f7td1GBwhsv3POGAXoGf9jfw00SknVN0R2
