--- a/src/theme/theme.yaml
+++ b/src/theme/theme.yaml
@@ -54,6 +54,7 @@ color:
     orange: &orange '#F4501E'
     lightYellow: &lightYellow '#F2E199'
     greenDark: &greenDark '#1D7E8E'
+    greenLight: &greenLight '#5BD8A9'
 
 
 
