--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-catch-links": "^2.0.2",
     "gatsby-plugin-feed": "^2.0.5",
     "gatsby-plugin-google-analytics": "^2.0.6",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-layout": "^1.0.2",
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-material-ui": "^2.1.9",
