--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^3.7.0",
     "fontfaceobserver": "^2.0.13",
     "gatsby": "^2.0.21",
+    "gatsby-cli": "^2.19.0",
     "gatsby-image": "^2.0.5",
     "gatsby-plugin-algolia": "^0.1.0",
     "gatsby-plugin-catch-links": "^2.0.2",
@@ -56,6 +57,7 @@
     "react-obfuscate": "^2.1.4",
     "react-share": "^2.2.0",
     "react-visibility-sensor": "^4.1.0",
+    "sharp": "^0.27.1",
     "styled-jsx": "^2.2.7",
     "styled-jsx-plugin-postcss": "^0.1.3",
     "styled-jsx-plugin-stylelint": "^0.1.0",
