--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "gatsby-starter-hero-blog",
-  "version": "2.0.0",
-  "author": "Greg Lobinski <greglobinski@gmail.com>",
+  "name": "Evaminerva.com",
+  "version": "1.0.0",
+  "author": "Ismael Jaouhar <ismael.jaouhar@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/core": "^4.9.9",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.2.10",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.4.0",
     "antd": "^3.7.0",
     "fontfaceobserver": "^2.0.13",
     "gatsby": "^2.0.21",
-    "gatsby-cli": "^2.19.0",
     "gatsby-image": "^2.0.5",
     "gatsby-plugin-algolia": "^0.1.0",
     "gatsby-plugin-catch-links": "^2.0.2",
@@ -22,7 +21,7 @@
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-layout": "^1.0.2",
     "gatsby-plugin-manifest": "^2.0.2",
-    "gatsby-plugin-material-ui": "^2.1.9",
+    "gatsby-plugin-material-ui": "^2.1.10",
     "gatsby-plugin-netlify": "^2.0.0",
     "gatsby-plugin-offline": "^2.0.6",
     "gatsby-plugin-react-helmet": "^3.0.0",
@@ -41,23 +40,21 @@
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-transformer-remark": "^2.1.3",
     "gatsby-transformer-sharp": "^2.1.1",
-    "install": "^0.13.0",
     "js-yaml": "^3.12.0",
+    "material-ui": "^0.20.2",
     "normalize.css": "^8.0.0",
-    "npm": "^6.14.6",
     "prismjs": "^1.15.0",
     "react": "^16.5.2",
     "react-addons-perf": "^15.4.2",
     "react-dom": "^16.5.2",
     "react-facebook": "^5.0.3",
     "react-helmet": "^5.2.0",
-    "react-icons": "^3.11.0",
+    "react-icons": "^3.1.0",
     "react-instantsearch": "^5.2.2",
     "react-md-spinner": "^0.3.0",
     "react-obfuscate": "^2.1.4",
     "react-share": "^2.2.0",
     "react-visibility-sensor": "^4.1.0",
-    "sharp": "^0.27.1",
     "styled-jsx": "^2.2.7",
     "styled-jsx-plugin-postcss": "^0.1.3",
     "styled-jsx-plugin-stylelint": "^0.1.0",
