--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@material-ui/core": "^4.9.9",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.2.10",
-    "@stripe/react-stripe-js": "^1.1.2",
-    "@stripe/stripe-js": "^1.4.0",
+    "@stripe/react-stripe-js": "^1.4.0",
+    "@stripe/stripe-js": "^1.13.1",
     "antd": "^3.7.0",
     "fontfaceobserver": "^2.0.13",
     "gatsby": "^2.0.21",
@@ -55,6 +55,7 @@
     "react-obfuscate": "^2.1.4",
     "react-share": "^2.2.0",
     "react-visibility-sensor": "^4.1.0",
+    "stripe": "^8.138.0",
     "styled-jsx": "^2.2.7",
     "styled-jsx-plugin-postcss": "^0.1.3",
     "styled-jsx-plugin-stylelint": "^0.1.0",
