--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-feed": "^2.0.5",
     "gatsby-plugin-google-analytics": "^2.11.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-google-gtag": "^3.1.0",
     "gatsby-plugin-layout": "^1.0.2",
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-material-ui": "^2.1.10",
