--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-addons-perf": "^15.4.2",
     "react-dom": "^16.5.2",
     "react-facebook": "^5.0.3",
+    "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.1.0",
     "react-instantsearch": "^5.2.2",
