--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
+GENERATE_SOURCEMAP=false
 GATSBY_STRIPE_PUBLISHABLE_KEY=pk_test_o6b4jIM3oR2AcO8hCjnnpJdH002ryQom04
 GATSBY_BUTTON_SKU_ID_ONE=sku_I9bxRXxfxHS3w2
 GATSBY_BUTTON_SKU_ID_FOUR=sku_I9cGZyZ7XSQ3B0
