--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+GENERATE_SOURCEMAP=false
 ALGOLIA_APP_ID=3EM3VUGOKW
 ALGOLIA_SEARCH_ONLY_API_KEY=347b650eaeec5a774fa46500eab1a019
 ALGOLIA_ADMIN_API_KEY=31b55cd89e5f9b770d3f37c3e1de89ce
