--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-image": "^2.0.5",
     "gatsby-plugin-algolia": "^0.1.0",
     "gatsby-plugin-catch-links": "^2.0.2",
+    "gatsby-plugin-facebook-pixel": "^1.0.5",
     "gatsby-plugin-feed": "^2.0.5",
     "gatsby-plugin-google-analytics": "^2.11.0",
     "gatsby-plugin-google-gtag": "^3.4.0",
