--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "author": "Ismael Jaouhar <ismael.jaouhar@gmail.com>",
   "license": "MIT",
+  "engines" : { 
+    "npm" : "6.4.1",
+    "node" : "10.15.0"
+  },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.9.9",
