--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "author": "Ismael Jaouhar <ismael.jaouhar@gmail.com>",
   "license": "MIT",
-  "engines" : { 
-    "npm" : "6.4.1",
-    "node" : "10.15.0"
+  "engines": {
+    "npm": "6.4.1",
+    "node": "10.15.0"
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
@@ -16,10 +16,10 @@
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.4.0",
     "antd": "^3.7.0",
+    "classnames": "^2.3.1",
     "fontfaceobserver": "^2.0.13",
-    "gatsby": "^2.0.21",
+    "gatsby": "^2.32.13",
     "gatsby-image": "^2.0.5",
-    "gatsby-plugin-algolia": "^0.1.0",
     "gatsby-plugin-catch-links": "^2.0.2",
     "gatsby-plugin-facebook-pixel": "^1.0.5",
     "gatsby-plugin-feed": "^2.0.5",
@@ -50,9 +50,9 @@
     "material-ui": "^0.20.2",
     "normalize.css": "^8.0.0",
     "prismjs": "^1.15.0",
-    "react": "^16.5.2",
+    "react": "^16.14.0",
     "react-addons-perf": "^15.4.2",
-    "react-dom": "^16.5.2",
+    "react-dom": "^16.14.0",
     "react-facebook": "^5.0.3",
     "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^5.2.0",
@@ -75,6 +75,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "clean": "gatsby clean",
     "devhost": "gatsby develop --host 192.168.0.112",
     "format": "prettier --write 'src/**/*.js'",
     "lint-errors": "eslint src/**/*.{js,jsx} --quiet",
